Fix sandbox mode and remove space when monaco toolbox is not visible

--- a/theme/toolbox.less
+++ b/theme/toolbox.less
@@ -37,6 +37,10 @@
     background: lighten(@red, 10%) !important;
 }
 
+.monacoToolboxDiv.invisible {
+    display: none !important;
+}
+
 /*******************************
         Toolbox root
 *******************************/
